[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/actors/beginner_player/BeginnerPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tileSet.png" type="Texture" id=2]
[ext_resource path="res://src/cells/test_cell.gd" type="Script" id=3]
[ext_resource path="res://src/actors/beginner_robot_worker/BeginnerRobotWorker.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/user_interface/user_interface.tscn" type="PackedScene" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=4]
0/name = "tileSet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tileSet.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 128, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tileSet.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 384, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tileSet.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 128, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "tileSet.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 256, 128, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "tileSet.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 128, 256, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0

[node name="TestCell" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 128, 128 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, -1610612735, 0, 2, -1610612735, 0, 3, -1610612735, 0, 4, -1610612735, 0, 5, -1610612735, 0, 6, -1610612735, 0, 7, -1610612735, 0, 8, -1610612735, 0, 9, -1610612735, 0, 10, -1610612735, 0, 11, -1610612735, 0, 12, -1610612735, 0, 13, -1610612735, 0, 14, -1610612735, 0, 15, -1610612736, 0, 16, 0, 0, 17, -1610612735, 0, 18, -1610612735, 0, 19, -1610612735, 0, 20, -1610612735, 0, 21, -1610612735, 0, 22, -1610612735, 0, 23, -1610612736, 0, 24, 0, 0, 25, -1610612735, 0, 26, -1610612735, 0, 27, -1610612735, 0, 28, -1610612735, 0, 29, -1610612735, 0, 30, -1610612735, 0, 31, -1610612736, 0, 65536, 1, 0, 65537, 1610612740, 0, 65538, 1610612740, 0, 65539, 1610612740, 0, 65540, 1610612740, 0, 65541, 1610612740, 0, 65542, 1610612740, 0, 65543, 1610612740, 0, 65544, 1610612740, 0, 65545, 1610612740, 0, 65546, 1610612740, 0, 65547, 1610612740, 0, 65548, 1610612740, 0, 65549, 1610612741, 0, 65550, 1610612740, 0, 65551, -1610612734, 0, 65552, 2, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 4, 0, 65558, 4, 0, 65559, -1610612734, 0, 65560, 2, 0, 65561, -1610612733, 0, 65562, 4, 0, 65563, 4, 0, 65564, -1610612733, 0, 65565, 4, 0, 65566, 5, 0, 65567, 1610612737, 0, 131072, 1, 0, 131073, 1610612740, 0, 131074, 1610612740, 0, 131075, 1610612740, 0, 131076, 1610612741, 0, 131077, 1610612740, 0, 131078, 1610612740, 0, 131079, 1610612740, 0, 131080, 1610612740, 0, 131081, 1610612740, 0, 131082, 1610612740, 0, 131083, 1610612740, 0, 131084, 1610612740, 0, 131085, 1610612740, 0, 131086, 1610612740, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 4, 0, 131092, 4, 0, 131093, 4, 0, 131094, 4, 0, 131095, 4, 0, 131096, 4, 0, 131097, 4, 0, 131098, 3, 0, 131099, -1610612731, 0, 131100, 4, 0, 131101, -1073741821, 0, 131102, 1610612739, 0, 131103, 1610612737, 0, 196608, 1, 0, 196609, 1610612740, 0, 196610, 1610612740, 0, 196611, 1610612740, 0, 196612, 1610612740, 0, 196613, 1610612740, 0, 196614, 1610612740, 0, 196615, 1610612740, 0, 196616, 1610612740, 0, 196617, 1610612740, 0, 196618, 1610612740, 0, 196619, 1610612740, 0, 196620, 1610612740, 0, 196621, 1610612740, 0, 196622, 1610612740, 0, 196623, 1610612738, 0, 196624, -1073741822, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 4, 0, 196630, 4, 0, 196631, 1610612738, 0, 196632, -1073741822, 0, 196633, 4, 0, 196634, 4, 0, 196635, 5, 0, 196636, -1073741821, 0, 196637, 1610612741, 0, 196638, 1610612739, 0, 196639, 1610612737, 0, 262144, 1, 0, 262145, 1610612740, 0, 262146, 1610612740, 0, 262147, 1610612740, 0, 262148, 1610612740, 0, 262149, 1610612740, 0, 262150, 1610612740, 0, 262151, 1610612738, 0, 262152, -1073741822, 0, 262153, 1610612740, 0, 262154, 1610612740, 0, 262155, 1610612739, 0, 262156, 1610612740, 0, 262157, 1610612740, 0, 262158, 1610612740, 0, 262159, 1610612737, 0, 262160, -1073741824, 0, 262161, -1073741823, 0, 262162, -1073741823, 0, 262163, -1073741823, 0, 262164, -1073741822, 0, 262165, 4, 0, 262166, 1610612738, 0, 262167, 1610612736, 0, 262168, -1073741824, 0, 262169, -1073741823, 0, 262170, -1073741823, 0, 262171, -1073741822, 0, 262172, 4, 0, 262173, 1610612738, 0, 262174, -1073741823, 0, 262175, 1610612736, 0, 327680, 1, 0, 327681, 1610612740, 0, 327682, 1610612740, 0, 327683, 1610612740, 0, 327684, 1610612740, 0, 327685, 1610612740, 0, 327686, 1610612740, 0, 327687, -1610612734, 0, 327688, 2, 0, 327689, 1610612740, 0, 327690, 1610612740, 0, 327691, 1610612740, 0, 327692, 1610612740, 0, 327693, 1610612740, 0, 327694, 1610612740, 0, 327695, 1610612737, 0, 327696, 0, 0, 327697, -1610612735, 0, 327698, -1610612735, 0, 327699, -1610612735, 0, 327700, 2, 0, 327701, 4, 0, 327702, -1610612734, 0, 327703, -1610612736, 0, 327704, 0, 0, 327705, -1610612735, 0, 327706, -1610612735, 0, 327707, 2, 0, 327708, 4, 0, 327709, -1610612734, 0, 327710, -1610612735, 0, 327711, -1610612736, 0, 393216, 1, 0, 393217, 1610612740, 0, 393218, 1610612740, 0, 393219, 1610612740, 0, 393220, 1610612739, 0, 393221, 1610612740, 0, 393222, 1610612740, 0, 393223, 1610612740, 0, 393224, 1610612740, 0, 393225, 1610612739, 0, 393226, 1610612740, 0, 393227, 1610612740, 0, 393228, 1610612740, 0, 393229, 1610612740, 0, 393230, 1610612740, 0, 393231, 1610612737, 0, 393232, 1, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 393236, 4, 0, 393237, 4, 0, 393238, 4, 0, 393239, 1610612737, 0, 393240, 1, 0, 393241, 4, 0, 393242, 4, 0, 393243, 4, 0, 393244, 4, 0, 393245, 4, 0, 393246, 4, 0, 393247, 1610612737, 0, 458752, 1, 0, 458753, 1610612740, 0, 458754, 1610612739, 0, 458755, 1610612740, 0, 458756, 1610612740, 0, 458757, 1610612740, 0, 458758, 1610612740, 0, 458759, 1610612740, 0, 458760, 1610612740, 0, 458761, 1610612740, 0, 458762, 1610612740, 0, 458763, 1610612740, 0, 458764, -1073741819, 0, 458765, 1610612740, 0, 458766, 1610612740, 0, 458767, 1610612737, 0, 458768, 1, 0, 458769, 4, 0, 458770, 5, 0, 458771, 4, 0, 458772, 4, 0, 458773, 4, 0, 458774, 4, 0, 458775, 1610612737, 0, 458776, 1, 0, 458777, 4, 0, 458778, 1610612739, 0, 458779, 4, 0, 458780, 4, 0, 458781, -1073741821, 0, 458782, 4, 0, 458783, 1610612737, 0, 524288, 1, 0, 524289, 1610612740, 0, 524290, 1610612740, 0, 524291, 1610612740, 0, 524292, 1610612740, 0, 524293, 1610612740, 0, 524294, 1610612740, 0, 524295, 1610612740, 0, 524296, 1610612740, 0, 524297, 1610612740, 0, 524298, 1610612740, 0, 524299, 1610612740, 0, 524300, 1610612740, 0, 524301, 1610612740, 0, 524302, 1610612740, 0, 524303, 1610612737, 0, 524304, 1, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 524308, 4, 0, 524309, 4, 0, 524310, 4, 0, 524311, 1610612737, 0, 524312, 1, 0, 524313, 4, 0, 524314, 4, 0, 524315, 4, 0, 524316, 4, 0, 524317, 4, 0, 524318, 4, 0, 524319, 1610612737, 0, 589824, -1073741824, 0, 589825, -1073741823, 0, 589826, -1073741823, 0, 589827, -1073741822, 0, 589828, 1610612740, 0, 589829, 1610612738, 0, 589830, -1073741823, 0, 589831, -1073741823, 0, 589832, -1073741823, 0, 589833, -1073741823, 0, 589834, -1073741823, 0, 589835, -1073741822, 0, 589836, 1610612740, 0, 589837, 1610612740, 0, 589838, 1610612738, 0, 589839, 1610612736, 0, 589840, -1073741824, 0, 589841, -1073741823, 0, 589842, -1073741823, 0, 589843, -1073741823, 0, 589844, -1073741822, 0, 589845, 4, 0, 589846, 1610612738, 0, 589847, 1610612736, 0, 589848, -1073741824, 0, 589849, -1073741823, 0, 589850, -1073741823, 0, 589851, -1073741822, 0, 589852, 4, 0, 589853, 1610612738, 0, 589854, -1073741823, 0, 589855, 1610612736, 0, 655360, 0, 0, 655361, -1610612735, 0, 655362, -1610612735, 0, 655363, 2, 0, 655364, 1610612740, 0, 655365, -1610612734, 0, 655366, -1610612735, 0, 655367, -1610612735, 0, 655368, -1610612735, 0, 655369, -1610612735, 0, 655370, -1610612735, 0, 655371, 2, 0, 655372, 1610612740, 0, 655373, 1610612740, 0, 655374, -1610612734, 0, 655375, -1610612736, 0, 655376, 0, 0, 655377, -1610612735, 0, 655378, -1610612735, 0, 655379, -1610612735, 0, 655380, 2, 0, 655381, 4, 0, 655382, -1610612734, 0, 655383, -1610612736, 0, 655384, 0, 0, 655385, -1610612735, 0, 655386, -1610612735, 0, 655387, 2, 0, 655388, 4, 0, 655389, -1610612734, 0, 655390, -1610612735, 0, 655391, -1610612736, 0, 720896, 1, 0, 720897, 1610612740, 0, 720898, 1610612740, 0, 720899, 1610612740, 0, 720900, 1610612740, 0, 720901, 1610612740, 0, 720902, 1610612740, 0, 720903, 1610612740, 0, 720904, 1610612739, 0, 720905, 1610612740, 0, 720906, 1610612740, 0, 720907, 1610612740, 0, 720908, 1610612740, 0, 720909, 1610612740, 0, 720910, 1610612740, 0, 720911, -1610612734, 0, 720912, 2, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 4, 0, 720918, 4, 0, 720919, -1610612734, 0, 720920, 2, 0, 720921, 4, 0, 720922, 4, 0, 720923, 4, 0, 720924, 4, 0, 720925, 4, 0, 720926, 4, 0, 720927, 1610612737, 0, 786432, 1, 0, 786433, 1610612740, 0, 786434, 1610612740, 0, 786435, 1610612739, 0, 786436, 1610612740, 0, 786437, 1610612740, 0, 786438, 1610612740, 0, 786439, 1610612740, 0, 786440, 1610612740, 0, 786441, 1610612740, 0, 786442, 1610612740, 0, 786443, 1610612740, 0, 786444, 1610612740, 0, 786445, 1610612740, 0, 786446, 1610612740, 0, 786447, 4, 0, 786448, 4, 0, 786449, 4, 0, 786450, 4, 0, 786451, 4, 0, 786452, 4, 0, 786453, 4, 0, 786454, 4, 0, 786455, 4, 0, 786456, 4, 0, 786457, 4, 0, 786458, 4, 0, 786459, 4, 0, 786460, 4, 0, 786461, 4, 0, 786462, 4, 0, 786463, 1610612737, 0, 851968, 1, 0, 851969, 1610612740, 0, 851970, 1610612740, 0, 851971, 1610612740, 0, 851972, 1610612740, 0, 851973, 1610612740, 0, 851974, 1610612740, 0, 851975, 1610612739, 0, 851976, 1610612740, 0, 851977, 1610612740, 0, 851978, 1610612740, 0, 851979, 1610612741, 0, 851980, 1610612739, 0, 851981, 1610612740, 0, 851982, 1610612740, 0, 851983, 1610612738, 0, 851984, -1073741822, 0, 851985, 4, 0, 851986, 4, 0, 851987, 4, 0, 851988, 4, 0, 851989, 4, 0, 851990, 4, 0, 851991, 1610612738, 0, 851992, -1073741822, 0, 851993, 4, 0, 851994, 4, 0, 851995, 4, 0, 851996, 4, 0, 851997, 4, 0, 851998, 3, 0, 851999, 1610612737, 0, 917504, -1073741824, 0, 917505, -1073741823, 0, 917506, -1073741823, 0, 917507, -1073741823, 0, 917508, -1073741823, 0, 917509, -1073741823, 0, 917510, -1073741823, 0, 917511, -1073741823, 0, 917512, -1073741823, 0, 917513, -1073741823, 0, 917514, -1073741822, 0, 917515, -1073741820, 0, 917516, -1073741820, 0, 917517, 1610612738, 0, 917518, -1073741823, 0, 917519, 1610612736, 0, 917520, -1073741824, 0, 917521, -1073741823, 0, 917522, -1073741823, 0, 917523, -1073741823, 0, 917524, -1073741823, 0, 917525, -1073741823, 0, 917526, -1073741823, 0, 917527, 1610612736, 0, 917528, -1073741824, 0, 917529, -1073741823, 0, 917530, -1073741823, 0, 917531, -1073741823, 0, 917532, -1073741823, 0, 917533, -1073741823, 0, 917534, -1073741823, 0, 917535, 1610612736, 0, 983048, 0, 0, 983049, -1610612735, 0, 983050, 2, 0, 983051, -1073741820, 0, 983052, -1073741820, 0, 983053, -1610612734, 0, 983054, -1610612735, 0, 983055, -1610612736, 0, 1048584, 1, 0, 1048585, -1073741820, 0, 1048586, -1073741820, 0, 1048587, -1073741820, 0, 1048588, -1073741820, 0, 1048589, -1073741820, 0, 1048590, -1073741820, 0, 1048591, 1610612737, 0, 1114120, 1, 0, 1114121, -1073741820, 0, 1114122, -1073741820, 0, 1114123, -1073741820, 0, 1114124, -1073741820, 0, 1114125, -1073741820, 0, 1114126, -1073741820, 0, 1114127, 1610612737, 0, 1179656, 1, 0, 1179657, -1073741820, 0, 1179658, 3, 0, 1179659, -1073741820, 0, 1179660, -1073741820, 0, 1179661, -1073741820, 0, 1179662, -1073741820, 0, 1179663, 1610612737, 0, 1245192, -1073741824, 0, 1245193, -1073741823, 0, 1245194, -1073741822, 0, 1245195, -1073741820, 0, 1245196, -1073741820, 0, 1245197, 1610612738, 0, 1245198, -1073741823, 0, 1245199, 1610612736, 0, 1310720, 0, 0, 1310721, -1610612735, 0, 1310722, -1610612735, 0, 1310723, -1610612735, 0, 1310724, -1610612735, 0, 1310725, -1610612735, 0, 1310726, -1610612735, 0, 1310727, -1610612735, 0, 1310728, -1610612735, 0, 1310729, -1610612735, 0, 1310730, 2, 0, 1310731, -1073741820, 0, 1310732, -1073741820, 0, 1310733, -1610612734, 0, 1310734, -1610612735, 0, 1310735, -1610612735, 0, 1310736, -1610612735, 0, 1310737, -1610612735, 0, 1310738, -1610612735, 0, 1310739, -1610612735, 0, 1310740, -1610612735, 0, 1310741, -1610612735, 0, 1310742, -1610612735, 0, 1310743, -1610612736, 0, 1376256, 1, 0, 1376257, -1073741820, 0, 1376258, -1073741820, 0, 1376259, -1073741820, 0, 1376260, -1073741820, 0, 1376261, -1073741820, 0, 1376262, -1073741820, 0, 1376263, 4, 0, 1376264, 4, 0, 1376265, -1073741820, 0, 1376266, -1073741820, 0, 1376267, -1073741820, 0, 1376268, -1073741820, 0, 1376269, 4, 0, 1376270, 4, 0, 1376271, 4, 0, 1376272, 4, 0, 1376273, -1073741820, 0, 1376274, -1073741820, 0, 1376275, -1073741820, 0, 1376276, -1073741820, 0, 1376277, -1073741820, 0, 1376278, -1073741820, 0, 1376279, 1610612737, 0, 1441792, 1, 0, 1441793, -1073741820, 0, 1441794, 5, 0, 1441795, -1073741820, 0, 1441796, -1073741820, 0, 1441797, -1073741820, 0, 1441798, 3, 0, 1441799, 4, 0, 1441800, 4, 0, 1441801, 4, 0, 1441802, -1073741820, 0, 1441803, -1073741820, 0, 1441804, -1073741820, 0, 1441805, -1073741820, 0, 1441806, -1073741820, 0, 1441807, -1073741820, 0, 1441808, -1073741820, 0, 1441809, -1073741820, 0, 1441810, -1073741820, 0, 1441811, -1073741820, 0, 1441812, -1073741820, 0, 1441813, 5, 0, 1441814, -1073741820, 0, 1441815, 1610612737, 0, 1507328, 1, 0, 1507329, -1073741820, 0, 1507330, -1073741820, 0, 1507331, -1073741820, 0, 1507332, -1073741820, 0, 1507333, -1073741820, 0, 1507334, -1073741820, 0, 1507335, 4, 0, 1507336, 4, 0, 1507337, 4, 0, 1507338, -1073741820, 0, 1507339, -1073741820, 0, 1507340, -1073741820, 0, 1507341, 3, 0, 1507342, -1073741820, 0, 1507343, 4, 0, 1507344, 4, 0, 1507345, 4, 0, 1507346, -1073741820, 0, 1507347, -1073741820, 0, 1507348, -1073741820, 0, 1507349, -1073741820, 0, 1507350, -1073741820, 0, 1507351, 1610612737, 0, 1572864, 1, 0, 1572865, 4, 0, 1572866, 4, 0, 1572867, -1073741820, 0, 1572868, -1073741820, 0, 1572869, 4, 0, 1572870, 1610612738, 0, 1572871, -1073741823, 0, 1572872, -1073741823, 0, 1572873, -1073741822, 0, 1572874, 4, 0, 1572875, -1073741820, 0, 1572876, -1073741820, 0, 1572877, 4, 0, 1572878, 1610612738, 0, 1572879, -1073741823, 0, 1572880, -1073741823, 0, 1572881, -1073741822, 0, 1572882, 4, 0, 1572883, -1073741820, 0, 1572884, 4, 0, 1572885, 4, 0, 1572886, 4, 0, 1572887, 1610612737, 0, 1638400, 1, 0, 1638401, 4, 0, 1638402, 4, 0, 1638403, -1073741820, 0, 1638404, 4, 0, 1638405, 4, 0, 1638406, -1610612734, 0, 1638407, -1610612735, 0, 1638408, -1610612735, 0, 1638409, 2, 0, 1638410, 4, 0, 1638411, 4, 0, 1638412, -1073741820, 0, 1638413, 4, 0, 1638414, -1610612734, 0, 1638415, -1610612735, 0, 1638416, -1610612735, 0, 1638417, 2, 0, 1638418, 4, 0, 1638419, -1073741820, 0, 1638420, -1073741820, 0, 1638421, 4, 0, 1638422, 4, 0, 1638423, 1610612737, 0, 1703936, 1, 0, 1703937, -1073741820, 0, 1703938, 3, 0, 1703939, -1073741820, 0, 1703940, -1073741820, 0, 1703941, 4, 0, 1703942, 4, 0, 1703943, 4, 0, 1703944, 4, 0, 1703945, -1073741820, 0, 1703946, -1073741820, 0, 1703947, -1073741820, 0, 1703948, -1073741820, 0, 1703949, 4, 0, 1703950, 4, 0, 1703951, 4, 0, 1703952, 4, 0, 1703953, 4, 0, 1703954, -1073741820, 0, 1703955, -1073741820, 0, 1703956, -1073741820, 0, 1703957, -1073741820, 0, 1703958, -1073741820, 0, 1703959, 1610612737, 0, 1769472, 1, 0, 1769473, -1073741820, 0, 1769474, -1073741820, 0, 1769475, -1073741820, 0, 1769476, -1073741820, 0, 1769477, -1073741820, 0, 1769478, -1073741820, 0, 1769479, -1073741820, 0, 1769480, -1073741820, 0, 1769481, -1073741820, 0, 1769482, -1073741820, 0, 1769483, 5, 0, 1769484, -1073741820, 0, 1769485, -1073741820, 0, 1769486, 4, 0, 1769487, 4, 0, 1769488, -1073741820, 0, 1769489, -1073741820, 0, 1769490, -1073741820, 0, 1769491, 3, 0, 1769492, -1073741820, 0, 1769493, -1073741820, 0, 1769494, -1073741820, 0, 1769495, 1610612737, 0, 1835008, 1, 0, 1835009, -1073741820, 0, 1835010, -1073741820, 0, 1835011, -1073741820, 0, 1835012, -1073741820, 0, 1835013, -1073741820, 0, 1835014, -1073741820, 0, 1835015, 4, 0, 1835016, 4, 0, 1835017, 4, 0, 1835018, -1073741820, 0, 1835019, -1073741820, 0, 1835020, -1073741820, 0, 1835021, -1073741820, 0, 1835022, -1073741820, 0, 1835023, 4, 0, 1835024, 4, 0, 1835025, -1073741820, 0, 1835026, -1073741820, 0, 1835027, -1073741820, 0, 1835028, -1073741820, 0, 1835029, -1073741820, 0, 1835030, -1073741820, 0, 1835031, 1610612737, 0, 1900544, -1073741824, 0, 1900545, -1073741823, 0, 1900546, -1073741823, 0, 1900547, -1073741823, 0, 1900548, -1073741823, 0, 1900549, -1073741823, 0, 1900550, -1073741823, 0, 1900551, -1073741823, 0, 1900552, -1073741823, 0, 1900553, -1073741823, 0, 1900554, -1073741823, 0, 1900555, -1073741823, 0, 1900556, -1073741823, 0, 1900557, -1073741823, 0, 1900558, -1073741823, 0, 1900559, -1073741823, 0, 1900560, -1073741823, 0, 1900561, -1073741823, 0, 1900562, -1073741823, 0, 1900563, -1073741823, 0, 1900564, -1073741823, 0, 1900565, -1073741823, 0, 1900566, -1073741823, 0, 1900567, 1610612736, 0 )

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="UI" parent="UICanvas" instance=ExtResource( 5 )]

[node name="BeginnerPlayer" parent="." instance=ExtResource( 1 )]
position = Vector2( 320.172, 382.927 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
limit_left = 0
limit_top = 0

[node name="Tween" type="Tween" parent="."]

[node name="Robots" type="Node" parent="."]

[node name="RobotWorker8" parent="Robots" instance=ExtResource( 4 )]
position = Vector2( 1547.95, 3606.38 )
distance = 900

[node name="RobotWorker" parent="Robots" instance=ExtResource( 4 )]
position = Vector2( 1492.01, 363.284 )

[node name="RobotWorker2" parent="Robots" instance=ExtResource( 4 )]
position = Vector2( 2554.08, 466.117 )

[node name="RobotWorker3" parent="Robots" instance=ExtResource( 4 )]
position = Vector2( 3608.9, 234.96 )

[node name="RobotWorker4" parent="Robots" instance=ExtResource( 4 )]
position = Vector2( 1028.97, 1627.21 )

[node name="RobotWorker5" parent="Robots" instance=ExtResource( 4 )]
position = Vector2( 2559.39, 1510.31 )

[node name="RobotWorker6" parent="Robots" instance=ExtResource( 4 )]
position = Vector2( 3606.24, 1741.46 )

[node name="RobotWorker7" parent="Robots" instance=ExtResource( 4 )]
position = Vector2( 1541.77, 2931.79 )
distance = 900
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]
